Refactor I18N usage to utilize the current instance across multiple components and update related service models